# todomvc_tests

./: .gitignore  README.md  config.local.env.example  config.prod.env  config.py  config.stage.env  pyproject.toml
etc/jenkins_with_pyenv_poetry/: Dockerfile
etc/jenkins_with_pyenv_poetry/init.groovy.d/: allure-config.groovy
etc/selenoid/: compose.yaml
run/: start_up_selenoid.sh
tests/: conftest.py  poc_test.py  test_todo_features_at_all_filter.py  test_todo_management.py  todo_features.py  todo_features_at_all_filter.py  todo_management.py  todo_workflow_test.py  todos_workflow.py
todomvc_tests/: __init__.py
todomvc_tests/model/: __init__.py  todos.py
todomvc_tests/pages/: todos.py
