[tool.poetry]
name = "todomvc_tests"
version = "0.1.0"
description = ""
authors = ["andrii-kalyniuk <v13urnum@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
selene = {version = "^1.0.2", allow-prereleases = true}
pytest-xdist = "^1.31.0"
allure-pytest = "^2.8.11"
pydantic = "^1.8.1"
python-dotenv = "^0.15.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
